--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
    <meta name="keywords"  content="VAPING, VAPE, E-LIQUID, E-CIG, VAPERS, CLOUDCHASING, COILS, COILMASTER, VAPETRICKS, QUITSMOKING, SMOK, SMOKING, CIGARETTEFREE, NOSMOK, VAPORESSO, VOOPOO, IJOY, GEEKVAPE, VAPEMASTER, BUENOS AIRES, ARGENTINA, CABA, VILLA CRESPO">
     <title>"Todo Vapor Store |FAQ"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="CSS/todovaporstore.css">
+    <link rel="stylesheet" href="css/todovaporstore.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -59,18 +59,30 @@
 
 
     <section class="cuerpo">
-                <h3>¿Cómo realizar pedidos?</h3>
-            <p class="parrafos2">Una vez hayas identificado el producto a comprar, sólo basta con agregarlo al carrito y realizar la compra siguiendo los pasos.</p>
-                <h3>Los productos cuentan con garantía?</h3>
-            <p class="parrafos2">Si la compra es realizada directamente desde nuestra página web, todos los hardware contarán con una garantía de 30 días desde el momento en que se recibe el artículo.</p>
-                <h3>¿Qué métodos de pago aceptan?</h3>
-            <p class="parrafos2">Nuestros método de pago principales son Visa, Mastercard y American Express. Sin embargo, también aceptamos paypal, Uphold, Coinbase y Crytomonedas.</p>
-                <h3>¿En cuánto tiempo tendré listo mi producto?</h3>
-            <p class="parrafos2">Una vez recibida la confirmación de la compra, la entrega del pedido se realizará en las próximas 24/48 horas hábiles, para envíos al interior del país, la entrega se realiza entre 72/96 horas hábiles. </p>
-                <h3>Me equivoqué de producto, ¿puedo cambiarlo?</h3>
-            <p class="parrafos2">Una vez que la compra ha sido realizada, no podemos realizar el cambio de producto. En estos casos, recomendamos que se cancele la orden para obtener un reembolso y realizar la compra nuevamente.
-                <h3>Si soy de otro país, ¿puedo comprar?</h3>
-            <p class="parrafos2">Por los momentos sólo nos entramos en todo el territorio Argentino.</p>
+          <div>
+              <h3>¿Cómo realizar pedidos?</h3>
+              <p class="parrafos2">Una vez hayas identificado el producto a comprar, sólo basta con agregarlo al carrito y realizar la compra siguiendo los pasos.</p>
+          </div>
+          <div>
+              <h3>Los productos cuentan con garantía?</h3>
+              <p class="parrafos2">Si la compra es realizada directamente desde nuestra página web, todos los hardware contarán con una garantía de 30 días desde el momento en que se recibe el artículo.</p>
+          </div>
+          <div>
+              <h3>¿Qué métodos de pago aceptan?</h3>
+              <p class="parrafos2">Nuestros método de pago principales son Visa, Mastercard y American Express. Sin embargo, también aceptamos paypal, Uphold, Coinbase y Crytomonedas.</p>
+          </div>
+          <div>
+              <h3>¿En cuánto tiempo tendré listo mi producto?</h3>
+              <p class="parrafos2">Una vez recibida la confirmación de la compra, la entrega del pedido se realizará en las próximas 24/48 horas hábiles, para envíos al interior del país, la entrega se realiza entre 72/96 horas hábiles. </p>
+          </div>
+          <div>
+              <h3>Me equivoqué de producto, ¿puedo cambiarlo?</h3>
+              <p class="parrafos2">Una vez que la compra ha sido realizada, no podemos realizar el cambio de producto. En estos casos, recomendamos que se cancele la orden para obtener un reembolso y realizar la compra nuevamente.
+          </div>
+          <div>
+              <h3>Si soy de otro país, ¿puedo comprar?</h3>
+              <p class="parrafos2">Por los momentos sólo nos entramos en todo el territorio Argentino.</p>
+          </div>
     </section>
 <hr>
 <section class="cuerpo">
