--- a/tutoriales.html
+++ b/tutoriales.html
@@ -8,7 +8,7 @@
    <meta name="keywords"  content="VAPING, VAPE, E-LIQUID, E-CIG, VAPERS, CLOUDCHASING, COILS, COILMASTER, VAPETRICKS, QUITSMOKING, SMOK, SMOKING, CIGARETTEFREE, NOSMOK, VAPORESSO, VOOPOO, IJOY, GEEKVAPE, VAPEMASTER, BUENOS AIRES, ARGENTINA, CABA, VILLA CRESPO">
     <title>"Todo Vapor Store |Tutoriales"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="CSS/todovaporstore.css">
+    <link rel="stylesheet" href="css/todovaporstore.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
