modificación en index, imagen de fondo y estilo de faq

--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tienda física y online de vaporizadores, cigarillos electronicos y repuestos">
    <meta name="keywords"  content="VAPING, VAPE, E-LIQUID, E-CIG, VAPERS, CLOUDCHASING, COILS, COILMASTER, VAPETRICKS, QUITSMOKING, SMOK, SMOKING, CIGARETTEFREE, NOSMOK, VAPORESSO, VOOPOO, IJOY, GEEKVAPE, VAPEMASTER, BUENOS AIRES, ARGENTINA, CABA, VILLA CRESPO">
-    <title>"Todo Vapor Store |FAQ"</title>
+    <title>"Todo Vapor Store | FAQ"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,37 +58,37 @@
         </header>
 
 
-    <section class="cuerpo">
-          <div>
-              <h3>¿Cómo realizar pedidos?</h3>
-              <p class="parrafos2">Una vez hayas identificado el producto a comprar, sólo basta con agregarlo al carrito y realizar la compra siguiendo los pasos.</p>
+    <section class="questions">
+          <div class="questions_box">
+              <h3 class="questions_box_title">¿Cómo realizar pedidos?</h3>
+              <p class="questions_box_content">Una vez hayas identificado el producto a comprar, sólo basta con agregarlo al carrito y realizar la compra siguiendo los pasos.</p>
           </div>
-          <div>
-              <h3>Los productos cuentan con garantía?</h3>
-              <p class="parrafos2">Si la compra es realizada directamente desde nuestra página web, todos los hardware contarán con una garantía de 30 días desde el momento en que se recibe el artículo.</p>
+          <div class="questions_box">
+              <h3 class="questions_box_title">Los productos cuentan con garantía?</h3>
+              <p class="questions_box_content">Si la compra es realizada directamente desde nuestra página web, todos los hardware contarán con una garantía de 30 días desde el momento en que se recibe el artículo.</p>
           </div>
-          <div>
-              <h3>¿Qué métodos de pago aceptan?</h3>
-              <p class="parrafos2">Nuestros método de pago principales son Visa, Mastercard y American Express. Sin embargo, también aceptamos paypal, Uphold, Coinbase y Crytomonedas.</p>
+          <div class="questions_box">
+              <h3 class="questions_box_title">¿Qué métodos de pago aceptan?</h3>
+              <p class="questions_box_content">Nuestros método de pago principales son Visa, Mastercard y American Express. Sin embargo, también aceptamos paypal, Uphold, Coinbase y Crytomonedas.</p>
           </div>
-          <div>
-              <h3>¿En cuánto tiempo tendré listo mi producto?</h3>
-              <p class="parrafos2">Una vez recibida la confirmación de la compra, la entrega del pedido se realizará en las próximas 24/48 horas hábiles, para envíos al interior del país, la entrega se realiza entre 72/96 horas hábiles. </p>
+          <div class="questions_box">
+              <h3 class="questions_box_title">¿En cuánto tiempo tendré listo mi producto?</h3>
+              <p class="questions_box_content">Una vez recibida la confirmación de la compra, la entrega del pedido se realizará en las próximas 24/48 horas hábiles, para envíos al interior del país, la entrega se realiza entre 72/96 horas hábiles. </p>
           </div>
-          <div>
-              <h3>Me equivoqué de producto, ¿puedo cambiarlo?</h3>
-              <p class="parrafos2">Una vez que la compra ha sido realizada, no podemos realizar el cambio de producto. En estos casos, recomendamos que se cancele la orden para obtener un reembolso y realizar la compra nuevamente.
+          <div class="questions_box">
+              <h3 class="questions_box_title">Me equivoqué de producto, ¿puedo cambiarlo?</h3>
+              <p class="questions_box_content">Una vez que la compra ha sido realizada, no podemos realizar el cambio de producto. En estos casos, recomendamos que se cancele la orden para obtener un reembolso y realizar la compra nuevamente.
           </div>
-          <div>
-              <h3>Si soy de otro país, ¿puedo comprar?</h3>
-              <p class="parrafos2">Por los momentos sólo nos entramos en todo el territorio Argentino.</p>
+          <div class="questions_box">
+              <h3 class="questions_box_title">Si soy de otro país, ¿puedo comprar?</h3>
+              <p class="questions_box_content">Por los momentos sólo nos entramos en todo el territorio Argentino.</p>
           </div>
     </section>
-<hr>
 <section class="cuerpo">
      <h2>Si tú pregunta no estaba en la lista, déjanos tu consulta:</h2>
+     <div >
     <form action="https://formspree.io/f/mwkanlkl" method="POST">
-        <fieldset>			
+        <fieldset class="form">			
         <legend>Ingresa tus datos</legend>
         <label for="nombre">Nombre y Apellido:</label>
         <input type="name" placeholder="Ingresa tu nombre y Apellido" name="nombre">
@@ -102,6 +102,7 @@
         <input type="reset" value="Limpiar">
         </fieldset>
     </form>
+    </div>
 </section>
 
 <footer class="footer"> 
