--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tienda física y online de vaporizadores, cigarillos electronicos y repuestos">
    <meta name="keywords"  content="VAPING, VAPE, E-LIQUID, E-CIG, VAPERS, CLOUDCHASING, COILS, COILMASTER, VAPETRICKS, QUITSMOKING, SMOK, SMOKING, CIGARETTEFREE, NOSMOK, VAPORESSO, VOOPOO, IJOY, GEEKVAPE, VAPEMASTER, BUENOS AIRES, ARGENTINA, CABA, VILLA CRESPO">
-    <title> "Todo Vapor Store |Inicio"</title>
+    <title> "Todo Vapor Store | Inicio"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,11 +15,8 @@
 <body>
     <header class="backg">
         <div>
-                <p class="parrafos warning">
-                    ADVERTENCIA: Nuestros productos podrían contener Nicotina. La Nicotina es un producto adictivo y nocivo para la salud, debe ser utilizado con mucha precaución.
-                </p>
-                <img src="imagenes/logo1.png" alt="Logo" width="200" height="200" class="pic"> 
-            <h1  class="titulos"> Todo Vapor Store</h1>                    
+          <p class="parrafos warning">ADVERTENCIA: Nuestros productos podrían contener Nicotina. La Nicotina es un producto adictivo y nocivo para la salud, debe ser utilizado con mucha precaución.</p>
+          <h1  class="pagename"> Todo Vapor Store</h1>                    
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -95,7 +92,53 @@
                         </div>
                     </div>
                  </div>
- 
+
+
+<!-- Carrousel
+<div>             
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="imagenes/mods.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="imagenes/mods1.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="imagenes/mods2.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+-->
+
+
+
 <footer class="footer"> 
       <div class="footer__box">
         <h2 class="footer__sub-2">Soporte</h2>
