cambio en index y en productos

--- a/tutoriales.html
+++ b/tutoriales.html
@@ -9,7 +9,7 @@
     <title>"Todo Vapor Store | Tutoriales"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header class="backg">
