--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title> "Todo Vapor Store | Inicio"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--     <link rel="stylesheet" href="css/animate.min.css"> -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+<!--    <link rel="stylesheet" href="css/nivo-lightbox.css"> -->
+<!--    <link rel="stylesheet" href="css/nivo_themes/default/default.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> 
 </head>
 
 <body>
@@ -56,9 +61,38 @@
               </div>
             </div>
           </nav>
-     
     </header>
-                <div class="flex">
+<!--- Carrousel  -->
+<section>
+    <div id="myCarousel" class="carousel slide bg-inverse w-50 ms-auto me-auto" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block w-75"  src="imagenes/mods.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-75" src="imagenes/mods1.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-75" src="imagenes/mods2.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+
+    <!-- Galeria de imágenes 
+             <div class="flex">
                     <div class="flex__box">
                         <div class="flex__box__component">
                             <h3>OFERTAS LIMITADAS</h3>
@@ -92,53 +126,10 @@
                         </div>
                     </div>
                  </div>
-
-
-<!-- Carrousel
-<div>             
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="imagenes/mods.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="imagenes/mods1.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="imagenes/mods2.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>
 -->
-
-
-
+</section>
+-->
+<!----- 
 <footer class="footer"> 
       <div class="footer__box">
         <h2 class="footer__sub-2">Soporte</h2>
@@ -159,6 +150,59 @@
           <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
       </div>
 </footer>
+---->
+
+<footer class="footer">
+    <div class="footer_container">
+        <div class="footer-row">
+            <div class="footer-col">
+                <h4>Uno</h4>
+                <ul>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Nuestros Productos</h4>
+                <ul>
+                    <li><a href="#">Todos</a></li>
+                    <li><a href="#">Más vendidos</a></li>
+                    <li><a href="#">Nuevos</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Destacados</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>¿Necesitas ayuda?</h4>
+              <ul>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Garantía</a></li>
+                  <li><a href="#">Métodos de Pago</a></li>
+                  <li><a href="#">Envío</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Síguenos</h4>
+                <div class="social-links">                
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>          
+                                     
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+
+
+
+
+
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
