--- a/productos.html
+++ b/productos.html
@@ -9,7 +9,7 @@
     <title>"Todo Vapor Store | Productos"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -59,6 +59,256 @@
     </header>
 
 
+<div class="box-container"> 
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/new1.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 1 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+              <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+              <a href="#" style="--i:2;" class="fas fa-heart"></a>
+              <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+    <div class="image"> 
+        <img src="imagenes/new2.png" alt="">
+    </div>
+
+    <div class="info">
+        <h3 class="title">Producto 2 </h3>
+        <div class="subInfo">
+            <div class="price"> 100USD/- <span>1400USD/-</span></div>
+            <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half"></i>
+              </div>
+          </div>
+      </div>
+
+      <div class="overlay">
+        <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+        <a href="#" style="--i:2;" class="fas fa-heart"></a>
+        <a href="#" style="--i:3;" class="fas fa-search"></a>
+      </div>
+</div>
+
+<div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/new3.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 3 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/mods.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">SMOK TFV18 SUB-OHM TANK </h3>
+            <div class="subInfo">
+                <div class="price"> 25USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/mods1.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 5 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/mods2.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 6 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/pods.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 7 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+          </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/pods1.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 8 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                  </div>
+              </div>
+          </div>
+
+          <div class="overlay">
+            <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+            <a href="#" style="--i:2;" class="fas fa-heart"></a>
+            <a href="#" style="--i:3;" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+
+        <div class="image"> 
+            <img src="imagenes/pods2.png" alt="">
+        </div>
+
+        <div class="info">
+            <h3 class="title">Producto 9 </h3>
+            <div class="subInfo">
+                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half"></i>
+                </div>
+            </div>
+        </div>
+
+            <div class="overlay">
+                <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
+                <a href="#" style="--i:2;" class="fas fa-heart"></a>
+                <a href="#" style="--i:3;" class="fas fa-search"></a>
+            </div>
+    </div>
+</div>
+
+
+
+
+<!--
    <div class="flex">
         <div>
             <h3 class="flex__sub">OFERTAS LIMITADAS</h3>
@@ -85,7 +335,7 @@
             <img class="imgprod" src="imagenes/resis3.jpg" width="400" height="300" alt="">
         </div>
     </div>
-    
+    -->
 
     <footer class="footer"> 
       <div class="footer__box">
