responsividad en inicio y productos

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> 
 </head>
-
 <body>
+  <!-- Warning -->
     <header class="backg">
         <div>
           <p class="parrafos warning">ADVERTENCIA: Nuestros productos podrían contener Nicotina. La Nicotina es un producto adictivo y nocivo para la salud, debe ser utilizado con mucha precaución.</p>
           <h1  class="pagename"> Todo Vapor Store</h1>                    
         </div>
-
+<!-- Navigation bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">Inicio</a>
@@ -90,80 +90,11 @@
         <span class="visually-hidden">Next</span>
       </a>
     </div>
-
-    <!-- Galeria de imágenes 
-             <div class="flex">
-                    <div class="flex__box">
-                        <div class="flex__box__component">
-                            <h3>OFERTAS LIMITADAS</h3>
-                            <figure class="figure">
-                            <img class="movi figure-img img-fluid rounded" src="imagenes/pods.png" width="400" height="300" alt="Pods" >
-                            <figcaption class="figure-caption">Vaporesso Gen S Kit</figcaption>
-                            </figure>
-                        </div>
-                        <div class="flex__box__component">    
-                            <h3>Nuevos Productos</h3>
-                            <figure class="figure">
-                            <img class="movi2 figure-img img-fluid rounded" src="imagenes/mods.png" width="400" height="300" alt="Mods1" >
-                            <figcaption class="figure-caption">Voopoo Drag 2 Kit</figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="flex__box">
-                        <div class="flex__box__component">
-                            <h3>Productos Destacados </h3>
-                            <figure class="figure">
-                            <img class="movi figure-img img-fluid rounded" src="imagenes/resis.png" width="400" height="300" alt="Mods2">
-                            <figcaption class="figure-caption">Resistencias U1</figcaption>
-                          </figure>
-                        </div>
-                        <div class="flex__box__component">                    
-                            <h3>Armados y Set-ups</h3>
-                            <figure class="figure">                         
-                            <iframe class="figure-img img-fluid rounded" width="400" height="300" src="https://www.youtube.com/embed/CXNPrkgTBg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <figcaption class="figure-caption">El armado perfecto</figcaption>
-                          </figure>
-                        </div>
-                    </div>
-                 </div>
--->
 </section>
--->
-<!----- 
-<footer class="footer"> 
-      <div class="footer__box">
-        <h2 class="footer__sub-2">Soporte</h2>
-      </div>
-      <div class="footer__box">
-            <div class="footer__box__component">               
-                <h3 class="footer__sub-3">¡Nuestra Sucursal!</h3>
-                  <img class="footer__img" src="imagenes/sucursal-2.jpg" width="500" height="350" alt="Sucursal1" >
-            </div>
-            <div class="footer__box__component">
-                <h3 class="footer__sub-3">Nuestra Dirección</h3>
-                    <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <h3 class="footer__sub-3-1">Visítanos</h3>
-            </div>
-      </div>
-      <div class="footer__redes">
-          <a href="https://www.facebook.com/" class="fa fa-facebook" target="blank"></a>
-          <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
-      </div>
-</footer>
----->
-
+<!--  Footer -->
 <footer class="footer">
     <div class="footer_container">
         <div class="footer-row">
-            <div class="footer-col">
-                <h4>Uno</h4>
-                <ul>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                </ul>
-            </div>
             <div class="footer-col">
                 <h4>Nuestros Productos</h4>
                 <ul>
@@ -195,14 +126,6 @@
         </div>
     </div>
 </footer>
-
-
-
-
-
-
-
-
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
