--- a/productos.html
+++ b/productos.html
@@ -18,6 +18,7 @@
             <h1  class="titulos"> Nuestro catálogo de productos</h1>                    
         </div>   
 
+<!-- Navigation bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">Inicio</a>
@@ -54,19 +55,15 @@
                 </form>
               </div>
             </div>
-          </nav>
-   
+          </nav>   
     </header>
 
-
-<div class="box-container"> 
-
+<!--- Product Pictures --->
+<div class="box-container">
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/new1.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 1 </h3>
             <div class="subInfo">
@@ -80,20 +77,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
               <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
               <a href="#" style="--i:2;" class="fas fa-heart"></a>
               <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
     <div class="image"> 
         <img src="imagenes/new2.png" alt="">
     </div>
-
     <div class="info">
         <h3 class="title">Producto 2 </h3>
         <div class="subInfo">
@@ -107,20 +100,16 @@
               </div>
           </div>
       </div>
-
       <div class="overlay">
         <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
         <a href="#" style="--i:2;" class="fas fa-heart"></a>
         <a href="#" style="--i:3;" class="fas fa-search"></a>
       </div>
 </div>
-
 <div class="box">
-
         <div class="image"> 
             <img src="imagenes/new3.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 3 </h3>
             <div class="subInfo">
@@ -134,20 +123,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/mods.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">SMOK TFV18 SUB-OHM TANK </h3>
             <div class="subInfo">
@@ -161,20 +146,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/mods1.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 5 </h3>
             <div class="subInfo">
@@ -188,20 +169,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/mods2.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 6 </h3>
             <div class="subInfo">
@@ -215,20 +192,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/pods.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 7 </h3>
             <div class="subInfo">
@@ -242,20 +215,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
           </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/pods1.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 8 </h3>
             <div class="subInfo">
@@ -269,20 +238,16 @@
                   </div>
               </div>
           </div>
-
           <div class="overlay">
             <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
             <a href="#" style="--i:2;" class="fas fa-heart"></a>
             <a href="#" style="--i:3;" class="fas fa-search"></a>
         </div>
     </div>
-
     <div class="box">
-
         <div class="image"> 
             <img src="imagenes/pods2.png" alt="">
         </div>
-
         <div class="info">
             <h3 class="title">Producto 9 </h3>
             <div class="subInfo">
@@ -296,19 +261,15 @@
                 </div>
             </div>
         </div>
-
             <div class="overlay">
                 <a href="#" style="--i:1;" class="fas fa-shopping-cart"></a>
                 <a href="#" style="--i:2;" class="fas fa-heart"></a>
                 <a href="#" style="--i:3;" class="fas fa-search"></a>
             </div>
-    </div>
+     </div>
 </div>
 
-
-
-
-<!--
+<!----------------------------------------
    <div class="flex">
         <div>
             <h3 class="flex__sub">OFERTAS LIMITADAS</h3>
@@ -335,27 +296,41 @@
             <img class="imgprod" src="imagenes/resis3.jpg" width="400" height="300" alt="">
         </div>
     </div>
-    -->
-
-    <footer class="footer"> 
-      <div class="footer__box">
-        <h2 class="footer__sub-2">Soporte</h2>
-      </div>
-      <div class="footer__box">
-            <div class="footer__box__component">               
-                <h3 class="footer__sub-3">¡Nuestra Sucursal!</h3>
-                  <img class="footer__img" src="imagenes/sucursal-2.jpg" width="500" height="350" alt="Sucursal1" >
+    ------------------------------------------->
+<!--- Footer --->
+<footer class="footer">
+    <div class="footer_container">
+        <div class="footer-row">
+            <div class="footer-col">
+                <h4>Nuestros Productos</h4>
+                <ul>
+                    <li><a href="#">Todos</a></li>
+                    <li><a href="#">Más vendidos</a></li>
+                    <li><a href="#">Nuevos</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Destacados</a></li>
+                </ul>
             </div>
-            <div class="footer__box__component">
-                <h3 class="footer__sub-3">Nuestra Dirección</h3>
-                    <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <h3 class="footer__sub-3-1">Visítanos</h3>
+            <div class="footer-col">
+                <h4>¿Necesitas ayuda?</h4>
+              <ul>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Garantía</a></li>
+                  <li><a href="#">Métodos de Pago</a></li>
+                  <li><a href="#">Envío</a></li>
+              </ul>
             </div>
-      </div>
-      <div class="footer__redes">
-          <a href="https://www.facebook.com/" class="fa fa-facebook" target="blank"></a>
-          <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
-      </div>
+            <div class="footer-col">
+                <h4>Síguenos</h4>
+                <div class="social-links">                
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>          
+                                     
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
