cambios mayores en faq y tutoriales

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
 <body>
     <header class="backg">
         <div>
-            <h1  class="titulos"> Información y Contacto</h1>                    
+            <h1  class="pagesubname"> Información y Contacto</h1>                    
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -37,7 +37,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tutoriales.html">Tutoriales</a>
+                    <a class="nav-link" href="tutoriales.html">Información</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -89,17 +89,26 @@
        </form>
    </section>
 
-<footer class="footer">
-        <h3>¡Nuestra dirección!</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <h3>Visítanos</h3>
-        <div>
-            <!-- Facebook -->
-            <a href="https://www.facebook.com/" target="_blank"><i class="FB">FB</i></a>
-            <!-- Instagram -->
-            <a href="https://www.instagram.com" target="_blank"><i class="IG">IG</i></a>
-        </div>
-</footer>
+   <footer class="footer"> 
+    <div class="footer__box">
+      <h2 class="footer__sub-2">Soporte</h2>
+    </div>
+    <div class="footer__box">
+          <div class="footer__box__component">               
+              <h3 class="footer__sub-3">¡Nuestra Sucursal!</h3>
+                <img class="footer__img" src="imagenes/sucursal-2.jpg" width="500" height="350" alt="Sucursal1" >
+          </div>
+          <div class="footer__box__component">
+              <h3 class="footer__sub-3">Nuestra Dirección</h3>
+                  <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <h3 class="footer__sub-3-1">Visítanos</h3>
+          </div>
+    </div>
+    <div class="footer__redes">
+        <a href="https://www.facebook.com/" class="fa fa-facebook" target="blank"></a>
+        <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
+    </div>
+  </footer>
 <script src="js/bootstrap.bundle.min.js"></script>  
 </body>
 </html>
