--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
   <!-- Warning -->
-    <header class="backg">
+    <header>
         <div>
-          <p class="parrafos warning">ADVERTENCIA: Nuestros productos podrían contener Nicotina. La Nicotina es un producto adictivo y nocivo para la salud, debe ser utilizado con mucha precaución.</p>
+          <p class="warning">ADVERTENCIA: Nuestros productos podrían contener Nicotina. La Nicotina es un producto adictivo y nocivo para la salud, debe ser utilizado con mucha precaución.</p>
           <h1  class="pagename"> Todo Vapor Store</h1>                    
         </div>
 <!-- Navigation bar -->
@@ -45,7 +45,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tutoriales.html">Tutoriales</a>
+                    <a class="nav-link" href="tutoriales.html">Información</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -117,9 +117,9 @@
             <div class="footer-col">
                 <h4>Síguenos</h4>
                 <div class="social-links">                
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>          
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>          
                                      
                 </div>
             </div>
