--- a/productos.html
+++ b/productos.html
@@ -15,7 +15,7 @@
 <body>
     <header class="backg">
         <div>
-            <h1  class="titulos"> Nuestro catálogo de productos</h1>                    
+            <h1  class="pagesubname"> Nuestro catálogo de productos</h1>                    
         </div>   
 
 <!-- Navigation bar -->
@@ -40,7 +40,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tutoriales.html">Tutoriales</a>
+                    <a class="nav-link" href="tutoriales.html">Información</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
