--- a/tutoriales.html
+++ b/tutoriales.html
@@ -14,7 +14,7 @@
 <body>
     <header class="backg">
         <div>
-            <h1  class="titulos"> Vídeos y Tutoriales</h1>                    
+            <h1  class="pagesubname"> Información</h1>                    
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -37,7 +37,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tutoriales.html">Tutoriales</a>
+                    <a class="nav-link" href="tutoriales.html">Información</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -55,46 +55,7 @@
           </nav>
     </header>
 
-
-                <!-- No sirve esto -----------
-<section class=grid>
-        <top class="item1">
-            <h2>Conceptos Básicos</h2>
-        </top>
-        <div1 class="item2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7gVvymQHj9g?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3OyxEkO9Dw?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FBWuvCGxat8?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/lWPNznaJous?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div1>
-        <right1 class="item3">
-            <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200">
-        </right1>
-        <middle class="item4">
-            <h2>Reseñas y reviews</h2>
-        </middle>
-        <div2 class="item5"> 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZFpAv_kHpr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VuJAcLouJdI?list=PLlYBg_HwfKoDBAJAidOfhZmJ_38nQqlug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Jpnuoasop_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div2>
-        <right2 class="item6">
-            <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200">
-        </right2>
-        <bottom class="item7">
-            <h2>Líquidos, aromas y sabores</h2>
-        </bottom>
-        <div3 class="item8">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZvdZ8z-hzqo?list=PLlYBg_HwfKoAK9kecbzNVP8nhrB6JNOQV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/PkD_tOms_m8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/oG4zooJWBtk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div3>
-        <right3 class="item9">
-            <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200">
-        </right3>
-</section>
-                                     Hasta acá no sirve ------------->
-
+<!---
 <div class="grid-container">  
     <h2 class="caja titulo">Conceptos Básicos</h2>
       <div class="caja mobile"> <iframe width="560" height="315" src="https://www.youtube.com/embed/7gVvymQHj9g?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
@@ -111,91 +72,67 @@
       <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/PkD_tOms_m8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
       <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/oG4zooJWBtk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
       <div class="caja"> <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200"> </div>
-
-    <section>
-            <h2>Tabla de Potencia de Vapeo</h2>
-        <table border="1">
-            <tr>
-                <th>Ohm</th>
-                <th>Voltaje/Watage</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td>3.0</td>
-                <td>3.2</td>
-                <td>3.4</td>
-                <td>3.7</td>
-                <td>4.0</td>
-                <td>4.2</td>
-            </tr>
-            <tr>
-                <td>1.2</td>
-                <td id="verde">7.5</td>
-                <td id="amarillo">8.5</td>
-                <td id="amarillo">9.6</td>
-                <td id="anaranjado">11.4</td>
-                <td id="anaranjado">13.3</td>
-                <td id="anaranjado">14.7</td>
-            </tr>
-            <tr>
-                <td>1.3</td>
-                <td id="verde">6.9 </td>
-                <td id="verde">7.9</td>
-                <td id="amarillo">8.9</td>
-                <td id="anaranjado">10.5</td>
-                <td id="anaranjado">12.3</td>
-                <td id="rojo">13.6</td>
-            </tr>
-            <tr>
-                <td>1.5</td>
-                <td id="verde">6.0</td>
-                <td id="verde">6.8</td>
-                <td id="verde">7.7</td>
-                <td id="amarillo">9.1</td>
-                <td id="rojo">10.7</td>
-                <td id="rojo">11.8</td>
-            </tr>
-            <tr>
-                <td>1.8</td>
-                <td id="verde">5.0</td>
-                <td id="verde">5.7</td>
-                <td id="verde">6.4</td>
-                <td id="verde">7.6</td>
-                <td id="amarillo">8.9</td>
-                <td id="amarillo">9.8</td>
-            </tr>
-            <tr>
-                <td>2.0</td>
-                <td id="verde">4.5</td>
-                <td id="verde">5.1</td>
-                <td id="verde">5.8</td>
-                <td id="verde">6.9</td>
-                <td id="verde">8.0</td>
-                <td id="amarillo">8.8</td>
-            </tr>
-        </table>
-    </section>
 </div>
-<footer class="footer"> 
-  <div class="footer__box">
-    <h2 class="footer__sub-2">Soporte</h2>
+--->
+<!--- Articulos --->
+<div class="container-content">
+    <article>
+      <h1>Titulo #1</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repellat veritatis, modi qui dignissimos exercitationem corrupti unde minus aspernatur dolorum ipsum consequuntur laboriosam maxime soluta quos reprehenderit cupiditate! Iusto, quia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse placeat dignissimos eos in doloribus magni a ratione optio rem officia repellat quam ullam est excepturi laudantium enim hic, cum impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus molestiae suscipit qui odit totam! Officiis iste nisi animi voluptates voluptatum! Illum fugiat consectetur veniam labore libero dicta voluptas accusantium similique.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga natus ratione iusto sit ipsum explicabo quos adipisci nisi similique aliquam possimus eius quod consectetur ad a, quae pariatur unde eveniet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, tempora dolor autem quas perferendis ad fugit sit eligendi dignissimos eos, dolores assumenda error unde sapiente vitae dicta quibusdam quos? Alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minus eum optio! Velit odit officia soluta, commodi nostrum quae, cupiditate corrupti hic ab perferendis quasi obcaecati architecto labore ipsam! Fugiat.</p>
+
+        <h1>Subtitulo #1</h1>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, totam reprehenderit est necessitatibus ducimus facere accusamus neque dicta magni, consequuntur, amet expedita voluptas asperiores animi nobis? Aperiam quod sunt natus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui consectetur nihil reiciendis error doloribus ducimus. Nesciunt pariatur culpa necessitatibus alias omnis corporis sint reprehenderit sit saepe! Sed, error iusto!</p>
+
+        <img src="imagenes/liquido1.png" atl="">
+
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+        
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+    </article>
+</div>
+
+
+
+<!--  Footer -->
+<footer class="footer">
+  <div class="footer_container">
+      <div class="footer-row">
+          <div class="footer-col">
+              <h4>Nuestros Productos</h4>
+              <ul>
+                  <li><a href="#">Todos</a></li>
+                  <li><a href="#">Más vendidos</a></li>
+                  <li><a href="#">Nuevos</a></li>
+                  <li><a href="#">Ofertas</a></li>
+                  <li><a href="#">Destacados</a></li>
+              </ul>
+          </div>
+          <div class="footer-col">
+              <h4>¿Necesitas ayuda?</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Garantía</a></li>
+                <li><a href="#">Métodos de Pago</a></li>
+                <li><a href="#">Envío</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+              <h4>Síguenos</h4>
+              <div class="social-links">                
+                  <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>          
+                                   
+              </div>
+          </div>
+      </div>
   </div>
-  <div class="footer__box">
-        <div class="footer__box__component">               
-            <h3 class="footer__sub-3">¡Nuestra Sucursal!</h3>
-              <img class="footer__img" src="imagenes/sucursal-2.jpg" width="500" height="350" alt="Sucursal1" >
-        </div>
-        <div class="footer__box__component">
-            <h3 class="footer__sub-3">Nuestra Dirección</h3>
-                <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <h3 class="footer__sub-3-1">Visítanos</h3>
-        </div>
-  </div>
-  <div class="footer__redes">
-      <a href="https://www.facebook.com/" class="fa fa-facebook" target="blank"></a>
-      <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
-  </div>
-</footer>    
+</footer>
 </body>
 <script src="js/bootstrap.bundle.min.js"></script>
 </html>
