cambios mayores en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
 <body>
     <header class="backg">
         <div>
-            <h1  class="pagesubname"> Información y Contacto</h1>                    
+            <h1  class="pagesubname">Contacto</h1>                    
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -55,13 +55,13 @@
           </nav>
     </header>
 
-    <section class="cuerpo">
+<!-- <section>
         <h2>¿Cómo podemos ayudarte?</h2>
             <h3>Presencia Global</h3>
             Acá va un filtro que cambiará el mapa según el país.
             FILTRO
                 <img src="images/map.jpg" width="200" height="200" alt="">
-                <!--- Acá va un filtro que cambiará el mapa según la país-->
+                 Acá va un filtro que cambiará el mapa según la país
             <h3>¿Necesitas asistencia en vivo?</h3>
                 <h4>Nuestra líneas de contacto:</h4>
                 <ul>
@@ -87,7 +87,74 @@
            <input type="reset" value="Limpiar">
            </fieldset>
        </form>
-   </section>
+</section> --->
+
+
+<section class="contact">
+  <div class="content">
+      <h2>Contactanos</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo, deserunt adipisci non omnis distinctio ipsum veritatis dolores. Aliquam animi natus amet incidunt dolor voluptatem magni at accusamus autem maiores.</p>
+  </div>
+  <div class="container">
+      <div class="contactinfo">
+          <div class="box">
+              <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+              <div class="text">
+                  <h3>Dirección</h3>
+                  <p>ajsdajksdkjasksajdkas</p>
+              </div>                
+          </div>
+          <div class="box">
+              <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+              <div class="text">
+                  <h3>Teléfono</h3>
+                  <p>(11)123456789</p>
+              </div>                
+          </div>
+          <div class="box">
+              <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+              <div class="text">
+                  <h3>Email</h3>
+                  <p>correo@.com</p>
+              </div>                
+          </div>
+      </div>
+      <div class="contactForm">
+        <form action="">
+            <h2>Enviar mensaje</h2>
+            <div class="inputBox">
+                <input type="name" name="" required="required">
+                <span>Nombre Completo</span>
+            </div>
+            <div class="inputBox">
+                <input type="e-mail" name="" required="required">
+                <span>Email</span>
+            </div>
+            <div class="inputBox">
+                <textarea required="required"></textarea>
+                <span>Tu mensaje...</span>
+            </div>
+            <div class="inputBox">
+                <input type="submit" name="" value="Enviar">
+          </div>
+        </form>
+      </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
    <footer class="footer"> 
     <div class="footer__box">
