--- a/faq.html
+++ b/faq.html
@@ -16,8 +16,7 @@
 
     <header class="backg">
             <div>
-                <h1 class="pagesubname"> Preguntas Frecuentes</h1>
-                <p class="parrafos"> Bienvenido a nuestras preguntas frecuentes, acá encontrás un espacio que podrá resolver cualquier duda antes de realizar un pedido. </p>                
+                <h1 class="pagesubname"> Preguntas Frecuentes</h1>             
             </div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -92,6 +91,7 @@
     </div>
   </div>
 </div>
+
 <!--- Formulario --->
 <div class="wrapper">
   <div class="title">
@@ -162,26 +162,26 @@
       <div class="form">
          <div class="inputfield">
             <label>Nombre(s)</label>
-            <input type="text" class="input">
+            <input type="name" class="input" placeholder="Ingresa tu nombre">
          </div>  
           <div class="inputfield">
             <label>Apellido(s)</label>
-            <input type="text" class="input">
+            <input type="name" class="input" placeholder="Ingresa tu apellido">
          </div>          
           <div class="inputfield">
             <label>Email</label>
-            <input type="text" class="input">
+            <input type="e-mail" class="input" placeholder="tu@correo.com">
          </div> 
         <div class="inputfield">
             <label>Número Telefónico</label>
-            <input type="text" class="input">
+            <input type="text" class="input" placeholder="11345678">
          </div> 
         <div class="inputfield">
             <label>Consulta</label>
-            <textarea class="textarea"></textarea>
+            <textarea class="textarea" placeholder="Tu mensaje..."></textarea>
          </div>        
         <div class="inputfield">
-          <input type="submit" value="Register" class="btn">
+          <input type="submit" value="Enviar" class="btn">
         </div>
       </div>
   </div>	
